[package]
name = "mouser"
version = "0.1.1"
edition = "2021"
authors = ["Matt Thompson <matt@boondocker.io>"]
license = "MIT OR Apache-2.0"
description = "Mouser API Client"
repository = "https://github.com/boondocklabs/mouser"
categories = ["api bindings"]
keywords = ["mouser", "electronics"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.4", features = ["json"] }
secrecy = "0.8.0"
serde = { version = "1.0.200", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "tokio-macros", "rt", "macros"] }
